# ShaShengShao

./: .gitignore  CMakeLists.txt  README.md  androidapp.readme.txt
HitAlert/app/: build.gradle  proguard-rules.pro
HitAlert/app/src/androidTest/java/taeyoink/hitalert/: ExampleInstrumentedTest.java
HitAlert/app/src/main/: AndroidManifest.xml
HitAlert/app/src/main/java/taeyoink/hitalert/: HitAlertUtil.java  MainActivity.java
HitAlert/app/src/main/res/layout/: activity_main.xml
HitAlert/app/src/main/res/values/: strings.xml
HitAlert/app/src/test/java/taeyoink/hitalert/: ExampleUnitTest.java
inc/: Config.hpp  HitAlert.hpp  Pundlik13.hpp  Utils.hpp
src/: HitAlert.cpp  Pundlik13.cpp  Utils.cpp  main.cpp  main.cpp.framediff  v1.cpp  v2.cpp  v4.cpp
src/old/: main.framediff.cpp  v1.cpp  v2.cpp  v3.cpp  v5.cpp
